
  [ Max Vozeler ]
  * Use grub2 when ext4 is chosen (closes: #529363).

  [ Felix Zielcke ]
  * Change the debhelper compat level to 7 and bump the build
    dependency.
  * Replace deprecated `dh_clean -k' with `dh_prep'.
  * Remove the lintian overrides, they're no longer needed.
  * Use UUIDs in the grub2 generated menuentrys. (Closes: #473401)

 -- Felix Zielcke <fzielcke@z-51.de>  Wed, 10 Jun 2009 17:27:40 +0200

grub-installer (1.37) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Check dmraid's exit code rather than parsing its output.
    - cciss and ida logical drive numbers may go up to 15, not just 9.
    - Only check for the boot partition being on dmraid if the user allowed
      us to activate dmraid, to cope with cases where dmraid is misdetected
      (LP: #346001).
  * Don't pass the -y option to update-grub if installing grub2 (closes:
    #526089).

  [ Frans Pop ]
  * Remove myself as uploader.

  [ Updated translations ]
  * Bengali (bn.po) by Md. Rezwan Shahid
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Estonian (et.po) by Mattias Põldaru
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by marce villarino
  * Hindi (hi.po) by Kumar Appaiah
  * Italian (it.po) by Milo Casagrande
  * Kazakh (kk.po) by Dauren Sarsenov
  * Malayalam (ml.po) by Praveen Arimbrathodiyil
  * Norwegian Bokmal (nb.po) by Hans Fredrik Nordhaug
  * Slovak (sk.po) by Ivan Masár
  * Tagalog (tl.po) by Eric Pareja
  * Vietnamese (vi.po) by Clytie Siddall

 -- Colin Watson <cjwatson@debian.org>  Wed, 29 Apr 2009 13:22:34 +0100

grub-installer (1.36) unstable; urgency=low

  * Allow to install grub when /boot is on XFS. Since version 0.97-47lenny2
    grub supports XFS so it can be installed without hanging grub-installer.

 -- Frans Pop <fjp@debian.org>  Fri, 23 Jan 2009 02:59:03 +0100

grub-installer (1.35) unstable; urgency=low

  * Add support for MMC/SD card devices (mmcblkX).
