@@ -14,8 +14,10 @@ grub-installer (1.38) UNRELEASED; urgency=low
   * Replace deprecated `dh_clean -k' with `dh_prep'.
   * Remove the lintian overrides, they're no longer needed.
   * Use UUIDs in the grub2 generated menuentrys. (Closes: #473401)
+  * Add drivemap in the grub2 generated menuentry for DOS/Windows in
+    case a recent grub2 gets installed.
 
- -- Felix Zielcke <fzielcke@z-51.de>  Wed, 10 Jun 2009 17:27:40 +0200
+ -- Felix Zielcke <fzielcke@z-51.de>  Wed, 10 Jun 2009 17:46:09 +0200
 
 grub-installer (1.37) unstable; urgency=low
 
